[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "model-fallback-planner-py"
version = "0.1.0"
description = "Plan model fallback chains from capability, cost, and health data. Python port of @mukundakatta/model-fallback-planner."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = ["llm","models","fallback","routing","reliability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/model-fallback-planner-py"
Issues = "https://github.com/MukundaKatta/model-fallback-planner-py/issues"
Source = "https://github.com/MukundaKatta/model-fallback-planner-py"
"JS sibling" = "https://www.npmjs.com/package/@mukundakatta/model-fallback-planner"

[tool.hatch.build.targets.wheel]
packages = ["src/model_fallback_planner"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
